# nested_sampling

./: .gitignore  .project  .pydevproject  AUTHORS  LICENSE  Models.html  Models.rst  MonteCarloWalker.html  NestedSampling.html  NestedSampling.rst  PyroParallelisation.html  README.md  README.rst  Utils.rst  bh_sampling.py  compute_cv.py  dos2cv.py  explorer.py  explorer.ui  genindex.html  getting_started.html  getting_started.rst  harmonic_approx_cv.py  hparticle.py  index.html  index.rst  ising_model.py  lj_run.py  nested_sampling.html  nested_sampling.py  nested_sampling.rst  ns_gui.py  objects.inv  parallel_ns.py  run_tests.py  search.html  searchindex.js  setup.py  start_pygmin_gui.py  test.energies  (+2 more)
_build/doctrees/: MonteCarloWalker.doctree  NestedSampling.doctree  PyroParallelisation.doctree  environment.pickle  getting_started.doctree  index.doctree  nested_sampling.doctree
_build/html/: .buildinfo
_modules/: index.html  nested_sampling.html
_modules/nested_sampling/: utils.html
doc/: Makefile  MonteCarloWalker.rst  PyroParallelisation.rst  conf.py  getting_started.rst  index.rst
doc/_build/doctrees/: AcceptTest.doctree  Action.doctree  BaseMCRunner.doctree  ConfTest.doctree  MPI_Parallel_Tempering.doctree  Models.doctree  MonteCarloWalker.doctree  NestedSampling.doctree  TakeStep.doctree  Utils.doctree  environment.pickle  index.doctree  monte_carlo.doctree  nested_sampling.doctree  parallel_tempering.doctree
doc/_build/html/: AcceptTest.html  Action.html  BaseMCRunner.html  ConfTest.html  (+13 more)
examples/: make_plot.py
examples/animation/: make_plot.py  simple_plots.py
examples/harmonic/: hparticle.energies  hparticle.py  hparticle.replicas  run_hparticle.py  run_hparticle.replicas.p  run_hparticle.replicas_final  run_hparticle_distributed.py
nested_sampling/: __init__.py  _dispatcher.py  _mc_walker.py  _nested_sampling.py  _nested_sampling_runner.py  _worker.py  bh_sampling.py  build_database.py  compute_cv.py  database_eigenvecs.py  disconnectivity.py  dispatcher.py  dos2cv.py  explorer.py  get_connections.py  harmonic_approx_cv.py  hparticle.py  hparticle_dos_error.py  ising_model.py  jackknife_CV.py  lj_run.py  mc_walker.py  nested_sampling.py  nested_sampling_runner.py  nested_sampling_serial.py  ns_gui.py  parallel_ns.py  plot_cv.py  run_hparticle.py  run_tests.py  start_pygmin_gui.py  start_worker.py  test.energies  test.replicas  test.replicas_final  test_mc.py  workitem.py
nested_sampling/models/: __init__.py  harmonic.py  harmonic_nowalk.py
nested_sampling/profile/: worker00001-broker.prof
nested_sampling/src/: CMakeLists.txt  FindGSL.cmake  cv.c  cv_trapezoidal.c  cv_trapezoidal.pyx  mc.c  mcising.c  run_ising_mc.pyx  setup.py  weighted_pick.pyx
nested_sampling/tests/: __init__.py  _test_harmonic.py  _test_harmonic_sampler.py  _test_mc_walker.py  _test_ns.py  _test_ns_runner.py  test.energies  test.replicas.p  test.replicas_final
nested_sampling/utils/: __init__.py  _alpha_variance.py  _get_energies.py  _heat_capacity.py  _jackknife_variance.py  result.py  rotations.py
notes/: notes.tex
playground/nested_sampling/: bh_sampling.py  database_eigenvecs.py
scripts/: alpha_variance_CV.py  compute_cv.py  compute_cv_stdev.py  start_dispatcher.py  start_worker.py
src/: CMakeCache.txt  CMakeLists.txt  LJ_ns_plot.cpp  lj.c  mc.c  runmc.pyx  test_mc.py
unused/: jackknife_CV.py
(+10 files in other folders)
